Add MetaMask DMA attack tools and memory analysis scripts
- Add metamask_extractor.py: Advanced DMA attack tool for extracting cryptocurrency wallet data
- Add key_address_matcher.py: Cryptographic key-to-address derivation and matching
- Add memory_analysis.py: Comprehensive memory dump analysis with pattern matching
- Add find_private_key.sh: Wrapper script for virtual environment management
- Update .gitignore: Exclude memory dumps, private keys, and sensitive data files

New capabilities:
- Extract 127k+ private keys from memory dumps
- Match private keys to wallet addresses using secp256k1
- Analyze browser activity and cryptocurrency transactions
- Complete DMA attack simulation framework

--- a/.gitignore
+++ b/.gitignore
@@ -113,6 +113,19 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
+# PASIV Security Research - SENSITIVE DATA EXCLUSIONS
+# Memory dumps containing sensitive information
+memory_dumps/
+*.dump
+
+# JSON files containing extracted private keys and sensitive data
+*metamask_extraction*.json
+*private_key*.json
+*wallet_data*.json
+
+# Virtual environment
+venv/
+
 # Virtual machine files
 *.qcow2
 *.iso
