Add MetaMask Extension Tampering Tool for UI manipulation attacks
- Add metamask_tamper.py: Browser extension modification tool for security research
- Changes 'Welcome back' to 'Welcome HACK' and other UI text elements
- Injects visible warning banners to identify tampered extensions
- Creates automatic backups before any modifications
- Generates detailed tampering reports and logs all changes
- Add README_metamask_tamper.md: Comprehensive documentation and usage guide
- Update .gitignore: Exclude tampering backups and reports

New attack capabilities:
- Browser extension file modification and UI manipulation
- Social engineering demonstration through fake security messages
- Extension integrity testing and code signing verification
- User awareness training with realistic phishing scenarios
- Complete attack chain: memory extraction → UI tampering → credential theft

--- a/.gitignore
+++ b/.gitignore
@@ -122,6 +122,10 @@ memory_dumps/
 *metamask_extraction*.json
 *private_key*.json
 *wallet_data*.json
+*tamper_report*.json
+
+# Extension tampering backups and reports
+metamask_backups/
 
 # Virtual environment
 venv/
