Security: Move VM memory files to working directory and update gitignore
- Changed memory file path from /tmp to working directory
- Updated VM script and all attack tools
- Added specific gitignore patterns for memory files
- Prevents accidental exposure of sensitive VM memory data

--- a/.gitignore
+++ b/.gitignore
@@ -144,6 +144,12 @@ venv/
 # Shared memory files
 /dev/shm/*
 
+# PASIV VM Memory Files - NEVER COMMIT THESE
+pasiv_vm_memory.img
+pasiv_vm.pid
+*.memory
+*.mem
+
 # Build artifacts
 /build/
 /dist/ 
